[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/SplashScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/images/splash_text.png" type="Texture" id=2]
[ext_resource path="res://assets/images/splash_animation.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/splash_jingle.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 20, 10, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 30, 10, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 40, 10, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 50, 10, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 60, 10, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 70, 10, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 10, 10 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 90, 10, 10 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 10, 10 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="SplashScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Logo" type="Node2D" parent="."]

[node name="Text" type="Sprite" parent="Logo"]
texture = ExtResource( 3 )
centered = false

[node name="Animation" type="AnimatedSprite" parent="Logo"]
frames = SubResource( 12 )
frame = 5
playing = true
centered = false

[node name="FadeIn" type="Tween" parent="."]

[node name="HoldTimer" type="Timer" parent="."]
one_shot = true

[node name="FadeOut" type="Tween" parent="."]

[node name="Jingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="tween_completed" from="FadeIn" to="." method="_on_FadeIn_tween_completed"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_HoldTimer_timeout"]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
